--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,7 +65,38 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
- 
+/* Light Mode Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff; /* Light background */
+}
+
+::-webkit-scrollbar-thumb {
+  background: #000000; /* Light thumb */
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555; /* Light thumb hover */
+}
+
+/* Dark Mode Scrollbar Styles */
+.dark ::-webkit-scrollbar-track {
+  background: #333333; /* Dark background */
+}
+
+.dark ::-webkit-scrollbar-thumb {
+  background: #cccccc; /* Dark thumb */
+  border-radius: 5px;
+}
+
+.dark ::-webkit-scrollbar-thumb:hover {
+  background: #aaaaaa; /* Dark thumb hover */
+}
+
 @layer base {
   * {
     @apply border-border;
