--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+body {
+  font-family: 'Poppins', ui-sans-serif, system-ui;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
